# stattik

./: .gitignore  README.md  pyproject.toml
docs/: pygments.md
experiments/: annotations.py  compiler.py  main.py  schema.py  shapes.py
